# HeadacheInsight

./: .env.example  .gitignore  AGENTS.md  LICENSE  PROMPT.md  README.md  build-headacheinsight.bat  publish-headacheinsight-github.bat  quick-start-linux.sh  quick-start-macos.sh  quick-start-windows-admin.bat
android-app/: build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
backend/: .env.example  Dockerfile  headacheinsight.db  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py  logging.py
backend/app/db/: session.py
backend/app/models/: contracts.py  store.py
backend/app/services/: openai_service.py  prompt_loader.py  schema_loader.py  security.py
backend/headacheinsight_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/prompts/v1/: analysis_system.md  attachments_system.md  follow_up_system.md  voice_intake_system.md
backend/schemas/v1/: analysis_response.schema.json  attachment_analysis.schema.json  question_template_list.schema.json  voice_intake_draft.schema.json
backend/scripts/: run-dev.ps1  run-dev.sh
backend/tests/: test_api.py  test_schema_assets.py
backend/tests/fixtures/: sample_analysis_response.json  sample_episode_request.json
docs/: analysis-schema.md  architecture-decisions.md  architecture.md  build-and-run.md  implementation-plan.md  privacy-and-safety.md  question-schema.md
img/: README.md  icon-source-gpt-prompt.md
scripts/: bootstrap-linux.sh  bootstrap-macos.sh  bootstrap-windows-choco.ps1  bootstrap-windows.ps1  build-headacheinsight.ps1  (+3 more)
(+113 files in other folders)
